--- a/Sofos2ToDatawarehouse.Extrator.Accounting/App.config
+++ b/Sofos2ToDatawarehouse.Extrator.Accounting/App.config
@@ -1,6 +1,50 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+  <configSections>
+    <sectionGroup name="userSettings"
+       type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, &#xD;&#xA;                  Culture=neutral, PublicKeyToken=b77a5c561934e089"
+                                                                   >
+      <section name="Sofos2ToDatawarehouse.Extrator.Accounting.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
+
+  <userSettings>
+    <Sofos2ToDatawarehouse.Extrator.Accounting.Properties.Settings>
+      <setting name="HOST" serializeAs="String">
+        <value>127.0.0.1</value>
+      </setting>
+      <setting name="DB_USERNAME" serializeAs="String">
+        <value>root</value>
+      </setting>
+      <setting name="DB_PASSWORD" serializeAs="String">
+        <value>c3VwZXJ2aXNvcg==</value>
+      </setting>
+      <setting name="DROPSITE_FOLDER" serializeAs="String">
+        <value>D:\DatawarehouseSyncher\Dropsite</value>
+      </setting>
+      <setting name="MAX_FETCH_LIMIT" serializeAs="String">
+        <value>5</value>
+      </setting>
+      <setting name="DB_NAME" serializeAs="String">
+        <value>sofos2_main</value>
+      </setting>
+    </Sofos2ToDatawarehouse.Extrator.Accounting.Properties.Settings>
+  </userSettings>
+
+  <appSettings>
+    <add key="lastTransnumLogChargeAmount" value="397249" />
+  </appSettings>
+
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
