--- a/Sofos2.Sender.AccountingInventorySales/App.config
+++ b/Sofos2.Sender.AccountingInventorySales/App.config
@@ -1,6 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Sofos2.Sender.AccountingInventorySales.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <userSettings>
+        <Sofos2.Sender.AccountingInventorySales.Properties.Settings>
+            <setting name="BASE_URL" serializeAs="String">
+                <value>http://localhost/spork-api/api/</value>
+            </setting>
+            <setting name="API_ACCOUNTING_URL" serializeAs="String">
+                <value>pos_ins_ctrans_dw.php</value>
+            </setting>
+            <setting name="BRANCH_CODE" serializeAs="String">
+                <value>SIDC-1-2-1-3</value>
+            </setting>
+            <setting name="DROPSITE_FOLDER" serializeAs="String">
+                <value>D:\DatawarehouseSyncher\Dropsite</value>
+            </setting>
+        </Sofos2.Sender.AccountingInventorySales.Properties.Settings>
+    </userSettings>
 </configuration>
