--- a/Sofos2.Sender.AccountingInventorySales/Sofos2.Sender.Accounting.csproj
+++ b/Sofos2.Sender.AccountingInventorySales/Sofos2.Sender.Accounting.csproj
@@ -43,14 +43,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\AccountingController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Controller\" />
+    <ProjectReference Include="..\Sofos2ToDatawarehouse.Domain\Sofos2ToDatawarehouse.Domain.csproj">
+      <Project>{B097AC35-56CC-4925-93AC-5FE04752A1B6}</Project>
+      <Name>Sofos2ToDatawarehouse.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Sofos2ToDatawarehouse.Infrastructure\Sofos2ToDatawarehouse.Infrastructure.csproj">
+      <Project>{41A6C943-0A04-4AA8-B0C8-8D2F9727E238}</Project>
+      <Name>Sofos2ToDatawarehouse.Infrastructure</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
