--- a/Sofos2ToDatawarehouse.Extractor.Sales/Properties/Settings.settings
+++ b/Sofos2ToDatawarehouse.Extractor.Sales/Properties/Settings.settings
@@ -1,4 +1,4 @@
-﻿
+﻿<?xml version='1.0' encoding='utf-8'?>
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Sofos2ToDatawarehouse.Extractor.Sales.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
@@ -15,7 +15,7 @@
       <Value Profile="(Default)">D:\DatawarehouseSyncher\Dropsite</Value>
     </Setting>
     <Setting Name="MAX_FETCH_LIMIT" Type="System.String" Scope="User">
-      <Value Profile="(Default)">10</Value>
+      <Value Profile="(Default)">5</Value>
     </Setting>
     <Setting Name="DB_NAME" Type="System.String" Scope="User">
       <Value Profile="(Default)">sofos2_jasper</Value>
