--- a/Sofos2ToDatawarehouse.Extractor.Sales/Sofos2ToDatawarehouse.Extractor.Sales.csproj
+++ b/Sofos2ToDatawarehouse.Extractor.Sales/Sofos2ToDatawarehouse.Extractor.Sales.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controller\SalesController.cs" />
+    <Compile Include="Controller\ColaController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
