--- a/Sofos2ToDatawarehouse.Extrator.Accounting/Sofos2ToDatawarehouse.Extractor.Accounting.csproj
+++ b/Sofos2ToDatawarehouse.Extrator.Accounting/Sofos2ToDatawarehouse.Extractor.Accounting.csproj
@@ -34,7 +34,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,11 +45,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\ChargeAmountController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <DependentUpon>Settings.settings</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>PublicSettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Sofos2ToDatawarehouse.Domain\Sofos2ToDatawarehouse.Domain.csproj">
+      <Project>{B097AC35-56CC-4925-93AC-5FE04752A1B6}</Project>
+      <Name>Sofos2ToDatawarehouse.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Sofos2ToDatawarehouse.Infrastructure\Sofos2ToDatawarehouse.Infrastructure.csproj">
+      <Project>{41A6C943-0A04-4AA8-B0C8-8D2F9727E238}</Project>
+      <Name>Sofos2ToDatawarehouse.Infrastructure</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
