--- a/Sofos2.Sender.Accounting/App.config
+++ b/Sofos2.Sender.Accounting/App.config
@@ -2,14 +2,14 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Sofos2.Sender.AccountingInventorySales.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="Sofos2.Sender.Accounting.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
     <userSettings>
-        <Sofos2.Sender.AccountingInventorySales.Properties.Settings>
+        <Sofos2.Sender.Accounting.Properties.Settings>
             <setting name="BASE_URL" serializeAs="String">
                 <value>http://localhost/spork-api/api/</value>
             </setting>
@@ -22,6 +22,6 @@
             <setting name="DROPSITE_FOLDER" serializeAs="String">
                 <value>D:\DatawarehouseSyncher\Dropsite</value>
             </setting>
-        </Sofos2.Sender.AccountingInventorySales.Properties.Settings>
+        </Sofos2.Sender.Accounting.Properties.Settings>
     </userSettings>
 </configuration>
