--- a/Sofos2.Sender.Inventory/Sofos2.Sender.Inventory.csproj
+++ b/Sofos2.Sender.Inventory/Sofos2.Sender.Inventory.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C53EB571-E0F2-4BB0-9958-B5703623998D}</ProjectGuid>
+    <ProjectGuid>{CD835939-F1D9-4AC2-9DFC-0F1D61F1B620}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Sofos2ToDatawarehouse.Extractor.Sales</RootNamespace>
-    <AssemblyName>Sofos2ToDatawarehouse.Extractor.Sales</AssemblyName>
+    <RootNamespace>Sofos2.Sender.Inventory</RootNamespace>
+    <AssemblyName>Sofos2.Sender.Inventory</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controller\ColaStubController.cs" />
+    <Compile Include="Controller\InventoryController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
