ColaStub and CancelTransaction Extractor and Sender

--- a/Sofos2ToDatawarehouse.Domain/Sofos2ToDatawarehouse.Domain.csproj
+++ b/Sofos2ToDatawarehouse.Domain/Sofos2ToDatawarehouse.Domain.csproj
@@ -52,6 +52,9 @@
     <Compile Include="DTOs\SIDCAPI%27s\Inventory\Items\Create\CreateItemsCommand.cs" />
     <Compile Include="DTOs\SIDCAPI%27s\LogsEntityPost\LogsEntityPostRequest.cs" />
     <Compile Include="DTOs\SIDCAPI%27s\LogsEntityPost\LogsEntityPostResponse.cs" />
+    <Compile Include="DTOs\SIDCAPI%27s\Sales\CancelTransaction\BulkUpSert\CancelTransactionBulkUpsertRequest.cs" />
+    <Compile Include="DTOs\SIDCAPI%27s\Sales\CancelTransaction\BulkUpSert\CancelTransactionBulkUpsertResponse.cs" />
+    <Compile Include="DTOs\SIDCAPI%27s\Sales\CancelTransaction\Create\CreateCancelTransactionCommand.cs" />
     <Compile Include="DTOs\SIDCAPI%27s\Sales\ColaStub\BulkUpSert\ColaStubBulkUpsertRequest.cs" />
     <Compile Include="DTOs\SIDCAPI%27s\Sales\ColaStub\BulkUpSert\ColaStubBulkUpsertResponse.cs" />
     <Compile Include="DTOs\SIDCAPI%27s\Sales\ColaStub\Create\CreateColaStubCommand.cs" />
@@ -72,7 +75,8 @@
     <Compile Include="Entity\General\Global.cs" />
     <Compile Include="Entity\General\LoggerModel.cs" />
     <Compile Include="Entity\Inventory\Items.cs" />
-    <Compile Include="Entity\Sales\ColaStub.cs" />
+    <Compile Include="Entity\Sales\CancelTransactions.cs" />
+    <Compile Include="Entity\Sales\ColaStubTransaction.cs" />
     <Compile Include="Entity\Sales\ColaTransaction.cs" />
     <Compile Include="Entity\Sales\ColaTransactionDetail.cs" />
     <Compile Include="Entity\Sales\ColaTransactionPayment.cs" />
