--- a/Sofos2ToDatawarehouse.Extractor.ColaStub/Sofos2ToDatawarehouse.Extractor.ColaStub.csproj
+++ b/Sofos2ToDatawarehouse.Extractor.ColaStub/Sofos2ToDatawarehouse.Extractor.ColaStub.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C53EB571-E0F2-4BB0-9958-B5703623998D}</ProjectGuid>
+    <ProjectGuid>{92C805DA-7013-42C7-B681-7AEB1AA96C5F}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Sofos2ToDatawarehouse.Extractor.Sales</RootNamespace>
-    <AssemblyName>Sofos2ToDatawarehouse.Extractor.Sales</AssemblyName>
+    <RootNamespace>Sofos2ToDatawarehouse.Extractor.ColaStub</RootNamespace>
+    <AssemblyName>Sofos2ToDatawarehouse.Extractor.ColaStub</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controller\ColaController.cs" />
+    <Compile Include="Controller\ColaStubController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
