--- a/Sofos2ToDatawarehouse.Infrastructure/Sofos2ToDatawarehouse.Infrastructure.csproj
+++ b/Sofos2ToDatawarehouse.Infrastructure/Sofos2ToDatawarehouse.Infrastructure.csproj
@@ -84,20 +84,30 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\Accounting\AccountingQuery.cs" />
+    <Compile Include="Queries\CancelTransaction\CancelTransactionQuery.cs" />
+    <Compile Include="Queries\ColaStub\ColaStubQuery.cs" />
     <Compile Include="Queries\Inventory\ItemQuery.cs" />
     <Compile Include="Queries\Sales\ColaTransactionQuery.cs" />
     <Compile Include="Repository\Accounting\AccountingRepository.cs" />
+    <Compile Include="Repository\CancelTransaction\CancelTransactionRepository.cs" />
+    <Compile Include="Repository\ColaStub\ColaStubRepository.cs" />
     <Compile Include="Repository\General\DropSiteModelRepository.cs" />
     <Compile Include="Repository\General\GlobalRepository.cs" />
     <Compile Include="Repository\General\LogRepository.cs" />
     <Compile Include="Repository\Inventory\InventoryRepository.cs" />
     <Compile Include="Repository\Logs\Accounting\AccountingLogRepository.cs" />
+    <Compile Include="Repository\Logs\CancelTransaction\CancelTransactionLogRepository.cs" />
+    <Compile Include="Repository\Logs\ColaStub\ColaStubLogRepository.cs" />
     <Compile Include="Repository\Logs\Inventory\InventoryLogRepository.cs" />
     <Compile Include="Repository\Logs\Sales\ColaTransactionLogRepository.cs" />
     <Compile Include="Repository\Sales\SalesRepository.cs" />
     <Compile Include="Seeds\DataSourceSeeds.cs" />
     <Compile Include="Services\Accounting\AccountingService.cs" />
     <Compile Include="Services\Accounting\SIDCAPIAccountingService.cs" />
+    <Compile Include="Services\CancelTransaction\CancelTransactionService.cs" />
+    <Compile Include="Services\CancelTransaction\SIDCAPICancelTransactionService.cs" />
+    <Compile Include="Services\ColaStub\ColaStubService.cs" />
+    <Compile Include="Services\ColaStub\SIDCAPIColaStubService.cs" />
     <Compile Include="Services\Inventory\InventoryService.cs" />
     <Compile Include="Services\Inventory\SIDCAPIInventoryService.cs" />
     <Compile Include="Services\LogsEntity\ProcessLogsService.cs" />
