Extractor Cancel Charge Amount

--- a/SOFOS2.Sender.Sales/App.config
+++ b/SOFOS2.Sender.Sales/App.config
@@ -10,9 +10,6 @@
     </startup>
     <userSettings>
         <SOFOS2.Sender.Sales.Properties.Settings>
-            <setting name="BASE_URL" serializeAs="String">
-                <value>http://localhost/spork-api/api/</value>
-            </setting>
             <setting name="API_COLA_URL" serializeAs="String">
                 <value>pos_ins_ctrans_dw.php</value>
             </setting>
@@ -21,6 +18,12 @@
             </setting>
             <setting name="DROPSITE_FOLDER" serializeAs="String">
                 <value>D:\DatawarehouseSyncher\Dropsite</value>
+            </setting>
+            <setting name="BASE_URL" serializeAs="String">
+                <value>http://161.49.105.231:7557/spork_api_staging/api/</value>
+            </setting>
+            <setting name="API_TOKEN" serializeAs="String">
+                <value />
             </setting>
         </SOFOS2.Sender.Sales.Properties.Settings>
     </userSettings>
