--- a/Sofos2ToDatawarehouse.Extractor.Accounting/App.config
+++ b/Sofos2ToDatawarehouse.Extractor.Accounting/App.config
@@ -4,7 +4,7 @@
     <sectionGroup name="userSettings"
        type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, &#xD;&#xA;                  Culture=neutral, PublicKeyToken=b77a5c561934e089"
                                                                    >
-      <section name="Sofos2ToDatawarehouse.Extrator.Accounting.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      <section name="Sofos2ToDatawarehouse.Extractor.Accounting.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
 
@@ -13,7 +13,7 @@
   </startup>
 
   <userSettings>
-    <Sofos2ToDatawarehouse.Extrator.Accounting.Properties.Settings>
+    <Sofos2ToDatawarehouse.Extractor.Accounting.Properties.Settings>
       <setting name="HOST" serializeAs="String">
         <value>127.0.0.1</value>
       </setting>
@@ -32,7 +32,7 @@
       <setting name="DB_NAME" serializeAs="String">
         <value>sofos2_main</value>
       </setting>
-    </Sofos2ToDatawarehouse.Extrator.Accounting.Properties.Settings>
+    </Sofos2ToDatawarehouse.Extractor.Accounting.Properties.Settings>
   </userSettings>
 
   <appSettings>
