--- a/Sofos2ToDatawarehouse.Extractor.Accounting/Properties/Settings.settings
+++ b/Sofos2ToDatawarehouse.Extractor.Accounting/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Sofos2ToDatawarehouse.Extrator.Accounting.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Sofos2ToDatawarehouse.Extractor.Accounting.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="HOST" Type="System.String" Scope="User">
