--- a/Sofos2ToDatawarehouse.Extractor.CancelChargeAmount/Sofos2ToDatawarehouse.Extractor.CancelChargeAmount.csproj
+++ b/Sofos2ToDatawarehouse.Extractor.CancelChargeAmount/Sofos2ToDatawarehouse.Extractor.CancelChargeAmount.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B0954CAE-6BDF-4C22-88B7-E7F7C9E30525}</ProjectGuid>
+    <ProjectGuid>{32FAA690-E31D-4810-830D-A3551752A844}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Sofos2ToDatawarehouse.Extrator.Accounting</RootNamespace>
-    <AssemblyName>Sofos2ToDatawarehouse.Extrator.Accounting</AssemblyName>
+    <RootNamespace>Sofos2ToDatawarehouse.Extractor.CancelChargeAmount</RootNamespace>
+    <AssemblyName>Sofos2ToDatawarehouse.Extractor.CancelChargeAmount</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -34,9 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,19 +43,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controller\ChargeAmountController.cs" />
+    <Compile Include="Controller\CancelChargeAmountController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
-      <DependentUpon>Settings.settings</DependentUpon>
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="Properties\Settings.settings">
-      <Generator>PublicSettingsSingleFileGenerator</Generator>
+      <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
