Sender and API Token

--- a/SOFOS2.Sender.Sales/App.config
+++ b/SOFOS2.Sender.Sales/App.config
@@ -23,7 +23,7 @@
                 <value>http://161.49.105.231:7557/spork_api_staging/api/</value>
             </setting>
             <setting name="API_TOKEN" serializeAs="String">
-                <value />
+                <value>SIDCCOLA98XRT4MZ7YQK</value>
             </setting>
         </SOFOS2.Sender.Sales.Properties.Settings>
     </userSettings>
