--- a/Sofos2.Sender.Accounting/App.config
+++ b/Sofos2.Sender.Accounting/App.config
@@ -22,6 +22,9 @@
             <setting name="DROPSITE_FOLDER" serializeAs="String">
                 <value>D:\DatawarehouseSyncher\Dropsite</value>
             </setting>
+            <setting name="API_TOKEN" serializeAs="String">
+                <value>SIDCCOLA98XRT4MZ7YQK</value>
+            </setting>
         </Sofos2.Sender.Accounting.Properties.Settings>
     </userSettings>
 </configuration>
