--- a/Sofos2.Sender.Accounting/Properties/Settings.settings
+++ b/Sofos2.Sender.Accounting/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="DROPSITE_FOLDER" Type="System.String" Scope="User">
       <Value Profile="(Default)">D:\DatawarehouseSyncher\Dropsite</Value>
     </Setting>
+    <Setting Name="API_TOKEN" Type="System.String" Scope="User">
+      <Value Profile="(Default)">SIDCCOLA98XRT4MZ7YQK</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
