--- a/Sofos2.Sender.CancelTransaction/App.config
+++ b/Sofos2.Sender.CancelTransaction/App.config
@@ -19,8 +19,11 @@
       <setting name="DROPSITE_FOLDER" serializeAs="String">
         <value>D:\DatawarehouseSyncher\Dropsite</value>
       </setting>
-      <setting name="API_CancelTransaction_URL" serializeAs="String">
+      <setting name="API_CANCELTRANSACTION_URL" serializeAs="String">
         <value>pos_ins_ctrans_dw.php</value>
+      </setting>
+      <setting name="API_TOKEN" serializeAs="String">
+        <value>SIDCCOLA98XRT4MZ7YQK</value>
       </setting>
     </Sofos2.Sender.CancelTransaction.Properties.Settings>
   </userSettings>
