--- a/Sofos2.Sender.ColaStub/App.config
+++ b/Sofos2.Sender.ColaStub/App.config
@@ -22,6 +22,9 @@
       <setting name="API_COLASTUB_URL" serializeAs="String">
         <value>pos_ins_ctrans_dw.php</value>
       </setting>
+      <setting name="API_TOKEN" serializeAs="String">
+        <value>SIDCCOLA98XRT4MZ7YQK</value>
+      </setting>
     </Sofos2.Sender.ColaStub.Properties.Settings>
   </userSettings>
 </configuration>
