--- a/Sofos2.Sender.CancelChargeAmount/Sofos2.Sender.CancelChargeAmount.csproj
+++ b/Sofos2.Sender.CancelChargeAmount/Sofos2.Sender.CancelChargeAmount.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\CancelChargeAmountController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -57,6 +58,20 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Sofos2ToDatawarehouse.Domain\Sofos2ToDatawarehouse.Domain.csproj">
+      <Project>{B097AC35-56CC-4925-93AC-5FE04752A1B6}</Project>
+      <Name>Sofos2ToDatawarehouse.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Sofos2ToDatawarehouse.Extractor.CancelChargeAmount\Sofos2ToDatawarehouse.Extractor.CancelChargeAmount.csproj">
+      <Project>{32FAA690-E31D-4810-830D-A3551752A844}</Project>
+      <Name>Sofos2ToDatawarehouse.Extractor.CancelChargeAmount</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Sofos2ToDatawarehouse.Infrastructure\Sofos2ToDatawarehouse.Infrastructure.csproj">
+      <Project>{41A6C943-0A04-4AA8-B0C8-8D2F9727E238}</Project>
+      <Name>Sofos2ToDatawarehouse.Infrastructure</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
