--- a/Sofos2.Sender.Inventory/App.config
+++ b/Sofos2.Sender.Inventory/App.config
@@ -22,8 +22,11 @@
       <setting name="DROPSITE_FOLDER" serializeAs="String">
         <value>D:\DatawarehouseSyncher\Dropsite</value>
       </setting>
-      <setting name="API_ACCOUNTING_URL" serializeAs="String">
+      <setting name="API_INVENTORY_URL" serializeAs="String">
         <value>pos_ins_ctrans_dw.php</value>
+      </setting>
+      <setting name="API_TOKEN" serializeAs="String">
+        <value>SIDCCOLA98XRT4MZ7YQK</value>
       </setting>
     </Sofos2.Sender.Inventory.Properties.Settings>
 </userSettings>
