--- a/Sofos2.Sender.Inventory/Properties/Settings.settings
+++ b/Sofos2.Sender.Inventory/Properties/Settings.settings
@@ -14,8 +14,11 @@
     <Setting Name="DROPSITE_FOLDER" Type="System.String" Scope="User">
       <Value Profile="(Default)">D:\DatawarehouseSyncher\Dropsite</Value>
     </Setting>
-    <Setting Name="API_ACCOUNTING_URL" Type="System.String" Scope="User">
+    <Setting Name="API_INVENTORY_URL" Type="System.String" Scope="User">
       <Value Profile="(Default)">pos_ins_ctrans_dw.php</Value>
+    </Setting>
+    <Setting Name="API_TOKEN" Type="System.String" Scope="User">
+      <Value Profile="(Default)">SIDCCOLA98XRT4MZ7YQK</Value>
     </Setting>
   </Settings>
 </SettingsFile>
