added: bug fix.

--- a/SOFOS2.Sender.Sales/App.config
+++ b/SOFOS2.Sender.Sales/App.config
@@ -19,11 +19,23 @@
             <setting name="DROPSITE_FOLDER" serializeAs="String">
                 <value>D:\DatawarehouseSyncher\Dropsite</value>
             </setting>
-            <setting name="BASE_URL" serializeAs="String">
-                <value>http://161.49.105.231:7557/spork_api_staging/api/</value>
-            </setting>
             <setting name="API_TOKEN" serializeAs="String">
                 <value>SIDCCOLA98XRT4MZ7YQK</value>
+            </setting>
+            <setting name="BASE_URL" serializeAs="String">
+                <value>http://localhost/spork-api/api/</value>
+            </setting>
+            <setting name="HOST" serializeAs="String">
+                <value>127.0.0.1</value>
+            </setting>
+            <setting name="DB_USERNAME" serializeAs="String">
+                <value>root</value>
+            </setting>
+            <setting name="DB_PASSWORD" serializeAs="String">
+                <value>c3VwZXJ2aXNvcg==</value>
+            </setting>
+            <setting name="DB_NAME" serializeAs="String">
+                <value>main</value>
             </setting>
         </SOFOS2.Sender.Sales.Properties.Settings>
     </userSettings>
