--- a/SOFOS2.Sender.Sales/Properties/Settings.settings
+++ b/SOFOS2.Sender.Sales/Properties/Settings.settings
@@ -11,11 +11,23 @@
     <Setting Name="DROPSITE_FOLDER" Type="System.String" Scope="User">
       <Value Profile="(Default)">D:\DatawarehouseSyncher\Dropsite</Value>
     </Setting>
-    <Setting Name="BASE_URL" Type="System.String" Scope="User">
-      <Value Profile="(Default)">http://161.49.105.231:7557/spork_api_staging/api/</Value>
-    </Setting>
     <Setting Name="API_TOKEN" Type="System.String" Scope="User">
       <Value Profile="(Default)">SIDCCOLA98XRT4MZ7YQK</Value>
+    </Setting>
+    <Setting Name="BASE_URL" Type="System.String" Scope="User">
+      <Value Profile="(Default)">http://localhost/spork-api/api/</Value>
+    </Setting>
+    <Setting Name="HOST" Type="System.String" Scope="User">
+      <Value Profile="(Default)">127.0.0.1</Value>
+    </Setting>
+    <Setting Name="DB_USERNAME" Type="System.String" Scope="User">
+      <Value Profile="(Default)">root</Value>
+    </Setting>
+    <Setting Name="DB_PASSWORD" Type="System.String" Scope="User">
+      <Value Profile="(Default)">c3VwZXJ2aXNvcg==</Value>
+    </Setting>
+    <Setting Name="DB_NAME" Type="System.String" Scope="User">
+      <Value Profile="(Default)">main</Value>
     </Setting>
   </Settings>
 </SettingsFile>
