--- a/Sofos2.Sender.Inventory/App.config
+++ b/Sofos2.Sender.Inventory/App.config
@@ -23,7 +23,7 @@
         <value>D:\DatawarehouseSyncher\Dropsite</value>
       </setting>
       <setting name="API_INVENTORY_URL" serializeAs="String">
-        <value>pos_ins_ctrans_dw.php</value>
+        <value>pos_upd_iip_dw.php</value>
       </setting>
       <setting name="API_TOKEN" serializeAs="String">
         <value>SIDCCOLA98XRT4MZ7YQK</value>
