--- a/Sofos2ToDatawarehouse.Extractor.Sales/App.config
+++ b/Sofos2ToDatawarehouse.Extractor.Sales/App.config
@@ -34,7 +34,7 @@
     <value>5</value>
    </setting>
    <setting name="DB_NAME" serializeAs="String">
-    <value>sofos2_jasper</value>
+    <value>main</value>
    </setting>
   </Sofos2ToDatawarehouse.Extractor.Sales.Properties.Settings>
 	</userSettings>
