--- a/Sofos2.Sender.ColaStub/App.config
+++ b/Sofos2.Sender.ColaStub/App.config
@@ -20,7 +20,7 @@
         <value>D:\DatawarehouseSyncher\Dropsite</value>
       </setting>
       <setting name="API_COLASTUB_URL" serializeAs="String">
-        <value>pos_ins_ctrans_dw.php</value>
+        <value>pos_upd_stub_dw.php</value>
       </setting>
       <setting name="API_TOKEN" serializeAs="String">
         <value>SIDCCOLA98XRT4MZ7YQK</value>
