--- a/Sofos2ToDatawarehouse.Extractor.Accounting/App.config
+++ b/Sofos2ToDatawarehouse.Extractor.Accounting/App.config
@@ -30,7 +30,7 @@
         <value>5</value>
       </setting>
       <setting name="DB_NAME" serializeAs="String">
-        <value>sofos2_main</value>
+        <value>main</value>
       </setting>
     </Sofos2ToDatawarehouse.Extractor.Accounting.Properties.Settings>
   </userSettings>
