--- a/Sofos2ToDatawarehouse.Extractor.Inventory/App.config
+++ b/Sofos2ToDatawarehouse.Extractor.Inventory/App.config
@@ -34,7 +34,7 @@
         <value>10</value>
       </setting>
       <setting name="DB_NAME" serializeAs="String">
-        <value>sofos2_main</value>
+        <value>main</value>
       </setting>
     </Sofos2ToDatawarehouse.Extractor.Inventory.Properties.Settings>
   </userSettings>
