--- a/Sofos2ToDatawarehouse.Extractor.Sales/Properties/Settings.settings
+++ b/Sofos2ToDatawarehouse.Extractor.Sales/Properties/Settings.settings
@@ -18,7 +18,7 @@
       <Value Profile="(Default)">5</Value>
     </Setting>
     <Setting Name="DB_NAME" Type="System.String" Scope="User">
-      <Value Profile="(Default)">sofos2_jasper</Value>
+      <Value Profile="(Default)">main</Value>
     </Setting>
   </Settings>
 </SettingsFile>
