modified: exit and fix bugs

--- a/SOFOS2.Sender.Sales/App.config
+++ b/SOFOS2.Sender.Sales/App.config
@@ -23,10 +23,10 @@
                 <value>SIDCCOLA98XRT4MZ7YQK</value>
             </setting>
             <setting name="BASE_URL" serializeAs="String">
-                <value>http://localhost/spork-api/api/</value>
+                <value>http://161.49.105.231:7557/spork_api_staging/api/</value>
             </setting>
             <setting name="HOST" serializeAs="String">
-                <value>127.0.0.1</value>
+                <value>192.168.160.39</value>
             </setting>
             <setting name="DB_USERNAME" serializeAs="String">
                 <value>root</value>
