--- a/Sofos2.Sender.ColaStub/App.config
+++ b/Sofos2.Sender.ColaStub/App.config
@@ -11,7 +11,7 @@
   <userSettings>
     <Sofos2.Sender.ColaStub.Properties.Settings>
       <setting name="BASE_URL" serializeAs="String">
-        <value>http://localhost/spork-api/api/</value>
+        <value>http://161.49.105.231:7557/spork_api_staging/api/</value>
       </setting>
       <setting name="BRANCH_CODE" serializeAs="String">
         <value>SIDC-1-2-1-3</value>
