--- a/Sofos2.Sender.Inventory/App.config
+++ b/Sofos2.Sender.Inventory/App.config
@@ -11,7 +11,7 @@
   <userSettings>
     <Sofos2.Sender.Inventory.Properties.Settings>
       <setting name="BASE_URL" serializeAs="String">
-        <value>http://localhost/spork-api/api/</value>
+        <value>http://161.49.105.231:7557/spork_api_staging/api/</value>
       </setting>
       <setting name="API_COLA_URL" serializeAs="String">
         <value>pos_ins_ctrans_dw.php</value>
@@ -22,11 +22,11 @@
       <setting name="DROPSITE_FOLDER" serializeAs="String">
         <value>D:\DatawarehouseSyncher\Dropsite</value>
       </setting>
-      <setting name="API_INVENTORY_URL" serializeAs="String">
-        <value>pos_upd_iip_dw.php</value>
-      </setting>
       <setting name="API_TOKEN" serializeAs="String">
         <value>SIDCCOLA98XRT4MZ7YQK</value>
+      </setting>
+      <setting name="API_INVENTORY_URL" serializeAs="String">
+        <value>pos_upd_iip_dw.php</value>
       </setting>
     </Sofos2.Sender.Inventory.Properties.Settings>
 </userSettings>
