--- a/Sofos2.Sender.CancelChargeAmount/App.config
+++ b/Sofos2.Sender.CancelChargeAmount/App.config
@@ -11,10 +11,10 @@
   <userSettings>
     <Sofos2.Sender.CancelChargeAmount.Properties.Settings>
       <setting name="BASE_URL" serializeAs="String">
-        <value>http://localhost/spork-api/api/</value>
+		  <value>http://161.49.105.231:7557/spork_api_staging/api/</value>
       </setting>
       <setting name="API_CANCELCHARGEAMOUNT_URL" serializeAs="String">
-        <value>pos_ins_ctrans_dw.php</value>
+        <value>pos_upd_ca_cncl_dw.php</value>
       </setting>
       <setting name="BRANCH_CODE" serializeAs="String">
         <value>SIDC-1-2-1-3</value>
