--- a/Sofos2.Sender.CancelTransaction/App.config
+++ b/Sofos2.Sender.CancelTransaction/App.config
@@ -11,7 +11,7 @@
   <userSettings>
     <Sofos2.Sender.CancelTransaction.Properties.Settings>
       <setting name="BASE_URL" serializeAs="String">
-        <value>http://localhost/spork-api/api/</value>
+		  <value>http://161.49.105.231:7557/spork_api_staging/api/</value>
       </setting>
       <setting name="BRANCH_CODE" serializeAs="String">
         <value>SIDC-1-2-1-3</value>
@@ -20,7 +20,7 @@
         <value>D:\DatawarehouseSyncher\Dropsite</value>
       </setting>
       <setting name="API_CANCELTRANSACTION_URL" serializeAs="String">
-        <value>pos_ins_ctrans_dw.php</value>
+        <value>pos_upd_ctrans_dw.php</value>
       </setting>
       <setting name="API_TOKEN" serializeAs="String">
         <value>SIDCCOLA98XRT4MZ7YQK</value>
