Sender fix transffered file in ColaStub and Cancel Transaction

--- a/Sofos2.Sender.ColaStub/Properties/Settings.settings
+++ b/Sofos2.Sender.ColaStub/Properties/Settings.settings
@@ -11,11 +11,11 @@
     <Setting Name="DROPSITE_FOLDER" Type="System.String" Scope="User">
       <Value Profile="(Default)">D:\DatawarehouseSyncher\Dropsite</Value>
     </Setting>
-    <Setting Name="API_COLASTUB_URL" Type="System.String" Scope="User">
-      <Value Profile="(Default)">pos_ins_ctrans_dw.php</Value>
-    </Setting>
     <Setting Name="API_TOKEN" Type="System.String" Scope="User">
       <Value Profile="(Default)">SIDCCOLA98XRT4MZ7YQK</Value>
+    </Setting>
+    <Setting Name="API_COLASTUB_URL" Type="System.String" Scope="User">
+      <Value Profile="(Default)">pos_upd_stub_dw.php</Value>
     </Setting>
   </Settings>
 </SettingsFile>
