--- a/Sofos2ToDatawarehouse.Extractor.ColaStub/App.config
+++ b/Sofos2ToDatawarehouse.Extractor.ColaStub/App.config
@@ -23,7 +23,7 @@
                 <value>10</value>
             </setting>
             <setting name="HOST" serializeAs="String">
-                <value>localhost</value>
+                <value>192.168.160.39</value>
             </setting>
             <setting name="DB_NAME" serializeAs="String">
                 <value>main</value>
