--- a/Sofos2ToDatawarehouse.Extractor.CancelTransaction/App.config
+++ b/Sofos2ToDatawarehouse.Extractor.CancelTransaction/App.config
@@ -23,10 +23,10 @@
         <value>10</value>
       </setting>
       <setting name="HOST" serializeAs="String">
-        <value>127.0.0.1</value>
+        <value>192.168.160.39</value>
       </setting>
       <setting name="DB_NAME" serializeAs="String">
-        <value>sofos2_main</value>
+        <value>main</value>
       </setting>
     </Sofos2ToDatawarehouse.Extractor.CancelTransaction.Properties.Settings>
   </userSettings>
