--- a/Sofos2ToDatawarehouse.Extractor.Accounting/App.config
+++ b/Sofos2ToDatawarehouse.Extractor.Accounting/App.config
@@ -14,9 +14,6 @@
 
   <userSettings>
     <Sofos2ToDatawarehouse.Extractor.Accounting.Properties.Settings>
-      <setting name="HOST" serializeAs="String">
-        <value>127.0.0.1</value>
-      </setting>
       <setting name="DB_USERNAME" serializeAs="String">
         <value>root</value>
       </setting>
@@ -32,11 +29,18 @@
       <setting name="DB_NAME" serializeAs="String">
         <value>main</value>
       </setting>
+      <setting name="HOST" serializeAs="String">
+        <value>192.168.160.39</value>
+      </setting>
     </Sofos2ToDatawarehouse.Extractor.Accounting.Properties.Settings>
   </userSettings>
 
   <appSettings>
-    <add key="lastTransnumLogChargeAmount" value="397249" />
+    <add key="lastTransnumLogChargeAmount" value="711789" />
+    <add key="lastTransnumLogCancelChargeAmount" value="0" />
+    <add key="lastTransnumLogColastub" value="31729" />
+    <add key="lastTransnumLogCancelTransaction" value="0" />
+    <add key="lastTransnumLogColaTransaction" value="0" />
   </appSettings>
 
   <runtime>
