--- a/Sofos2ToDatawarehouse.Extractor.ColaTransactionExtractor/App.config
+++ b/Sofos2ToDatawarehouse.Extractor.ColaTransactionExtractor/App.config
@@ -4,7 +4,7 @@
     <sectionGroup name="userSettings"
        type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, &#xD;&#xA;                  Culture=neutral, PublicKeyToken=b77a5c561934e089"
                                                                    >
-      <section name="Sofos2ToDatawarehouse.Extractor.CancelChargeAmount.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      <section name="Sofos2ToDatawarehouse.Extractor.ColaTransactionExtractor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
 
@@ -13,10 +13,7 @@
   </startup>
 
   <userSettings>
-    <Sofos2ToDatawarehouse.Extractor.CancelChargeAmount.Properties.Settings>
-      <setting name="HOST" serializeAs="String">
-        <value>127.0.0.1</value>
-      </setting>
+    <Sofos2ToDatawarehouse.Extractor.ColaTransactionExtractor.Properties.Settings>
       <setting name="DB_USERNAME" serializeAs="String">
         <value>root</value>
       </setting>
@@ -30,14 +27,20 @@
         <value>5</value>
       </setting>
       <setting name="DB_NAME" serializeAs="String">
-        <value>sofos2_main</value>
+        <value>main</value>
       </setting>
-    </Sofos2ToDatawarehouse.Extractor.CancelChargeAmount.Properties.Settings>
+      <setting name="HOST" serializeAs="String">
+        <value>192.168.160.39</value>
+      </setting>
+    </Sofos2ToDatawarehouse.Extractor.ColaTransactionExtractor.Properties.Settings>
   </userSettings>
 
   <appSettings>
-    <add key="lastTransnumLogChargeAmount" value="0" />
-    <add key="lastTransnumLogCancelChargeAmount" value="0" />
+    <add key="lastTransnumLogChargeAmount" value="711788" />
+    <add key="lastTransnumLogCancelChargeAmount" value="711788" />
+    <add key="lastTransnumLogColastub" value="31728" />
+    <add key="lastTransnumLogCancelTransaction" value="711788" />
+    <add key="lastTransnumLogColaTransaction" value="711788" />
   </appSettings>
 
   <runtime>
