--- a/Sofos2.Sender.ColaTransactionSender/App.config
+++ b/Sofos2.Sender.ColaTransactionSender/App.config
@@ -11,7 +11,7 @@
     <userSettings>
         <Sofos2.Sender.ColaTransactionSender.Properties.Settings>
             <setting name="BASE_URL" serializeAs="String">
-                <value>http://localhost/spork-api/api/</value>
+                <value>http://161.49.105.231:7557/spork_api_staging/api/</value>
             </setting>
             <setting name="BRANCH_CODE" serializeAs="String">
                 <value>SIDC-1-2-1-3</value>
@@ -35,7 +35,7 @@
                 <value>pos_ins_ctrans_dw.php</value>
             </setting>
           <setting name="API_ACCOUNTING_URL" serializeAs="String">
-            <value>pos_ins_ctrans_dw.php</value>
+            <value>pos_upd_ca_dw.php</value>
           </setting>
             <setting name="HOST" serializeAs="String">
                 <value>192.168.160.39</value>
